--- a/index/index.html
+++ b/index/index.html
@@ -57,11 +57,11 @@
             <h1>海悅灣</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>9000 / 8</li>
-                <li>11000 / 10</li>
-                <li>13000 / 12</li>
-                <li>15000 / 18</li>
-                <li>17000 / 20</li>
+                <li>9000元 / 8人</li>
+                <li>11000元 / 10人</li>
+                <li>13000元 / 12人</li>
+                <li>15000元 / 18人</li>
+                <li>17000元 / 20人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -73,7 +73,7 @@
             <h1>河堤上的傻瓜</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>8000 / 8</li>
+                <li>8000元 / 8人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -85,11 +85,11 @@
             <h1>峇里散散步</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>13800 / 8</li>
-                <li>15800 / 10</li>
-                <li>16800 / 12</li>
-                <li>17800 / 14</li>
-                <li>18800 / 16</li>
+                <li>13800元 / 8人</li>
+                <li>15800元 / 10人</li>
+                <li>16800元 / 12人</li>
+                <li>17800元 / 14人</li>
+                <li>18800元 / 16人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -101,8 +101,8 @@
             <h1>有間民宿</h1>
             <p>價格 : 平日(日～四)</p>
             <ul>
-                <li>13000 / 12</li>
-                <li>16000 / 16</li>
+                <li>13000元 / 12人</li>
+                <li>16000元 / 16人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -114,7 +114,7 @@
             <h1>Fvilla</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>10000 / 8</li>
+                <li>10000元 / 8人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -126,8 +126,8 @@
             <h1>墾丁微風</h1>
             <p>價格 : 平日(日～四)</p>
             <ul>
-                <li>17800 / 18</li>
-                <li>27800 / 24</li>
+                <li>17800元 / 18人</li>
+                <li>27800元 / 24人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -139,7 +139,7 @@
             <h1>媚境811</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>10000 / 8</li>
+                <li>10000元 / 8人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -151,7 +151,7 @@
             <h1>後壁湖雨夏</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>17400 / 14</li>
+                <li>17400元 / 14人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -163,7 +163,7 @@
             <h1>心想事成</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>17000 / 18內</li>
+                <li>17000元 / 18人內</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -175,9 +175,9 @@
             <h1>沐晨</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>13000 / 8</li>
-                <li>14000 / 10</li>
-                <li>15000 / 12</li>
+                <li>13000元 / 8人</li>
+                <li>14000元 / 10人</li>
+                <li>15000元 / 12人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -189,7 +189,7 @@
             <h1>輕輕旅行</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>14000 / 14</li>
+                <li>14000元 / 14人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -201,9 +201,9 @@
             <h1>墾丁龍水灣</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>6500 / 6</li>
-                <li>8000 / 8</li>
-                <li>9500 / 10</li>
+                <li>6500元 / 6人</li>
+                <li>8000元 / 8人</li>
+                <li>9500元 / 10人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -215,8 +215,8 @@
             <h1>辰居</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>16000 / 14內都行</li>
-                <li>18000 / 16</li>
+                <li>16000元 / 14人內都行</li>
+                <li>18000元 / 16人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -228,7 +228,7 @@
             <h1>春苑</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>7000 / 8</li>
+                <li>7000元 / 8人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -240,7 +240,7 @@
             <h1>JU海遇民宿</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>12000 / 12</li>
+                <li>12000元 / 12人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -249,17 +249,17 @@
         </div>
 
         <div class="bnb">
-            <h1>橘子旅店</h1>
+            <h1>橘色旅店</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>10500 / 10</li>
-                <li>12000 / 12</li>
-                <li>14000 / 14</li>
-                <li>16000 / 16</li>
+                <li>10500元 / 10人</li>
+                <li>12000元 / 12人</li>
+                <li>14000元 / 14人</li>
+                <li>16000元 / 16人</li>
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘子旅店" target="_blank">橘子旅店</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">橘色旅店</a></li>
             </ul>
         </div>
 
@@ -267,7 +267,7 @@
             <h1>艾蜜堡</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>19800 / 20</li>
+                <li>19800元 / 20人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -279,9 +279,9 @@
             <h1>慢遊墾丁</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>14000 / 12</li>
-                <li>16000 / 15</li>
-                <li>18000 / 19</li>
+                <li>14000元 / 12人</li>
+                <li>16000元 / 15人</li>
+                <li>18000元 / 19人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -293,8 +293,8 @@
             <h1>靚岩</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>12000 / 10</li>
-                <li>17000 / 16</li>
+                <li>12000元 / 10人</li>
+                <li>17000元 / 16人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -306,7 +306,7 @@
             <h1>松平2館</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>19800 / 18</li>
+                <li>19800元 / 18人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -318,9 +318,9 @@
             <h1>映夏墾丁</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>9000 / 8</li>
-                <li>11000 / 10</li>
-                <li>13000 / 12</li>
+                <li>9000元 / 8人</li>
+                <li>11000元 / 10人</li>
+                <li>13000元 / 12人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -332,7 +332,7 @@
             <h1>戀南灣</h1>
             <p>價格 : 平日(一～四)</p>
             <ul>
-                <li>9000 / 10</li>
+                <li>9000元 / 10人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -344,7 +344,7 @@
             <h1>樂雅居</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>8000 / 10</li>
+                <li>8000元 / 10人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -356,7 +356,7 @@
             <h1>南境之美</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>13500 / 24</li>
+                <li>13500元 / 24人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -368,9 +368,9 @@
             <h1>去旅行</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>14000 / 10</li>
-                <li>16000 / 16</li>
-                <li>20000 / 20</li>
+                <li>14000元 / 10人</li>
+                <li>16000元 / 16人</li>
+                <li>20000元 / 20人</li>
             </ul>
             <p>網址 :</p>
             <ul>
@@ -382,10 +382,10 @@
             <h1>北歐風情</h1>
             <p>價格 : 平日(日～五)</p>
             <ul>
-                <li>5000 / 4</li>
-                <li>8500 / 10</li>
-                <li>10000 / 10+1(給一張小床)</li>
-                <li>7000 / 6</li>
+                <li>5000元 / 4人</li>
+                <li>7000元 / 6人</li>
+                <li>8500元 / 10人</li>
+                <li>10000元 / 10+1人(給一張小床)</li>
             </ul>
             <p>網址 :</p>
             <ul>
