--- a/index/index.html
+++ b/index/index.html
@@ -35,11 +35,11 @@
             border-radius: 5px;
         }
         a {
-            color: #007bff;
+            color: #4d9cf2;
             text-decoration: none;
         }
         a:hover {
-            text-decoration: underline;
+            text-decoration:solid;
         }
         .bnb {
             background-color: #ffffff;
