--- a/index/index.html
+++ b/index/index.html
@@ -53,21 +53,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="bnb">
-            <h1>海悅灣</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>9000元 / 8人</li>
-                <li>11000元 / 10人</li>
-                <li>13000元 / 12人</li>
-                <li>15000元 / 18人</li>
-                <li>17000元 / 20人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=hanyaybay" title="海悅灣" target="_blank">海悅灣</a></li>
-            </ul>
-        </div>
 
         <div class="bnb">
             <h1>河堤上的傻瓜</h1>
@@ -77,7 +62,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">河堤上的傻瓜</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -93,7 +78,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">峇里散散步</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -106,56 +91,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">有間民宿</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>Fvilla</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>10000元 / 8人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=fvilla&ROOM_ID=MYC24006901" title="Fvilla" target="_blank">Fvilla</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>墾丁微風</h1>
-            <p>價格 : 平日(日～四)</p>
-            <ul>
-                <li>17800元 / 18人</li>
-                <li>27800元 / 24人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=breezevilla" title="墾丁微風" target="_blank">墾丁微風</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>媚境811</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>10000元 / 8人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=mj811villa&ROOM_ID=MYC23011101" title="媚境811" target="_blank">媚境811</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>後壁湖雨夏</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>17400元 / 14人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=summerrain&ROOM_ID=MYC15048907" title="後壁湖雨夏" target="_blank">後壁湖雨夏</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -167,7 +103,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">心想事成</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -181,7 +117,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">沐晨</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -193,7 +129,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">輕輕旅行</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -207,7 +143,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">墾丁龍水灣</a></li>
+                <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -220,7 +156,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">辰居</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -232,7 +168,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">春苑</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -244,7 +180,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">JU海遇民宿</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -259,19 +195,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">橘色旅店</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>艾蜜堡</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>19800元 / 20人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=amibao&ROOM_ID=MYC18019009" title="艾蜜堡" target="_blank">艾蜜堡</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -285,7 +209,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">慢遊墾丁</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -298,33 +222,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">靚岩</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>松平2館</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>19800元 / 18人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=songping&ROOM_ID=MYC17038807" title="松平2館" target="_blank">松平2館</a></li>
-            </ul>
-        </div>
-
-        <div class="bnb">
-            <h1>映夏墾丁</h1>
-            <p>價格 : 平日(日～五)</p>
-            <ul>
-                <li>9000元 / 8人</li>
-                <li>11000元 / 10人</li>
-                <li>13000元 / 12人</li>
-            </ul>
-            <p>網址 :</p>
-            <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=yxkt" title="映夏墾丁" target="_blank">映夏墾丁</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -336,7 +234,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">戀南灣</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -348,7 +246,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">樂雅居</a></li>
+                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -360,7 +258,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">南境之美</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -374,7 +272,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">去旅行</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">侑穎</a></li>
             </ul>
         </div>
 
@@ -389,7 +287,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">北歐風情</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">侑穎</a></li>
             </ul>
         </div>
     </div>
