--- a/index/index.html
+++ b/index/index.html
@@ -78,7 +78,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -103,7 +103,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -129,7 +129,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -156,7 +156,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -180,7 +180,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -209,7 +209,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -234,7 +234,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -258,7 +258,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">施玟彤</a></li>
             </ul>
         </div>
 
@@ -287,7 +287,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">施玟彤</a></li>
             </ul>
         </div>
     </div>
