--- a/index/index.html
+++ b/index/index.html
@@ -49,6 +49,12 @@
             padding: 20px;
             margin: 20px 0;
         }
+        .bnb img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -64,6 +70,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">侑穎</a></li>
             </ul>
+            <img src="./im1.jpg" alt="河堤上的傻瓜">
         </div>
 
         <div class="bnb">
@@ -80,6 +87,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="./im2.png" alt="峇里散散步"> 
         </div>
 
         <div class="bnb">
@@ -93,6 +101,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im3.jpg" alt="有間民宿">
         </div>
 
         <div class="bnb">
@@ -105,6 +114,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im4.jpg" alt="心想事成">
         </div>
 
         <div class="bnb">
@@ -119,6 +129,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">侑穎</a></li>
             </ul>
+            <img src="./im5.jpg" alt="沐晨">
         </div>
 
         <div class="bnb">
@@ -131,6 +142,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im6.jpg" alt="輕輕旅行">
         </div>
 
         <div class="bnb">
@@ -145,6 +157,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im7.jpg" alt="墾丁龍水灣">
         </div>
 
         <div class="bnb">
@@ -158,6 +171,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im8.jpg" alt="辰居">
         </div>
 
         <div class="bnb">
@@ -170,6 +184,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im9.jpg" alt="春苑">
         </div>
 
         <div class="bnb">
@@ -182,6 +197,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im10.jpg" alt="JU海遇民宿">
         </div>
 
         <div class="bnb">
@@ -197,6 +213,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im11.jpg" alt="橘色旅店">
         </div>
 
         <div class="bnb">
@@ -211,6 +228,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im12.jpg" alt="慢遊墾丁">
         </div>
 
         <div class="bnb">
@@ -224,6 +242,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im13.jpg" alt="靚岩">
         </div>
 
         <div class="bnb">
@@ -236,6 +255,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im14.jpg" alt="戀南灣">
         </div>
 
         <div class="bnb">
@@ -248,6 +268,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im15.jpg" alt="樂雅居">
         </div>
 
         <div class="bnb">
@@ -260,6 +281,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im16.jpg" alt="南境之美">
         </div>
 
         <div class="bnb">
@@ -274,6 +296,7 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">侑穎</a></li>
             </ul>
+            <img src="/im17.jpg" alt="去旅行">
         </div>
 
         <div class="bnb">
@@ -289,7 +312,11 @@
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">施玟彤</a></li>
             </ul>
+            <img src="/im18.jpg" alt="北歐風情">
         </div>
     </div>
+    <footer>
+        <p style="text-align: center; font-size: 0.9em; margin-top: 20px;">&copy; Taiwan Stay Network</p>
+    </footer>
 </body>
 </html>
