--- a/index/index.html
+++ b/index/index.html
@@ -68,7 +68,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">河堤上的傻瓜</a></li>
             </ul>
             <img src="./im1.jpg" alt="河堤上的傻瓜">
         </div>
@@ -85,7 +85,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">峇里散散步</a></li>
             </ul>
             <img src="./im2.png" alt="峇里散散步"> 
         </div>
@@ -99,9 +99,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">有間民宿</a></li>
             </ul>
-            <img src="/im3.jpg" alt="有間民宿">
+            <img src="./im3.jpg" alt="有間民宿">
         </div>
 
         <div class="bnb">
@@ -112,9 +112,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">心想事成</a></li>
             </ul>
-            <img src="/im4.jpg" alt="心想事成">
+            <img src="./im4.jpg" alt="心想事成">
         </div>
 
         <div class="bnb">
@@ -127,7 +127,7 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">沐晨</a></li>
             </ul>
             <img src="./im5.jpg" alt="沐晨">
         </div>
@@ -140,9 +140,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">輕輕旅行</a></li>
             </ul>
-            <img src="/im6.jpg" alt="輕輕旅行">
+            <img src="./im6.jpg" alt="輕輕旅行">
         </div>
 
         <div class="bnb">
@@ -155,9 +155,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">墾丁龍水灣</a></li>
             </ul>
-            <img src="/im7.jpg" alt="墾丁龍水灣">
+            <img src="./im7.jpg" alt="墾丁龍水灣">
         </div>
 
         <div class="bnb">
@@ -169,9 +169,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">辰居</a></li>
             </ul>
-            <img src="/im8.jpg" alt="辰居">
+            <img src="./im8.jpg" alt="辰居">
         </div>
 
         <div class="bnb">
@@ -182,9 +182,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">春苑</a></li>
             </ul>
-            <img src="/im9.jpg" alt="春苑">
+            <img src="./im9.jpg" alt="春苑">
         </div>
 
         <div class="bnb">
@@ -195,9 +195,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">JU海遇民宿</a></li>
             </ul>
-            <img src="/im10.jpg" alt="JU海遇民宿">
+            <img src="./im10.jpg" alt="JU海遇民宿">
         </div>
 
         <div class="bnb">
@@ -211,9 +211,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">橘色旅店</a></li>
             </ul>
-            <img src="/im11.jpg" alt="橘色旅店">
+            <img src="./im11.jpg" alt="橘色旅店">
         </div>
 
         <div class="bnb">
@@ -226,9 +226,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">慢遊墾丁</a></li>
             </ul>
-            <img src="/im12.jpg" alt="慢遊墾丁">
+            <img src="./im12.jpg" alt="慢遊墾丁">
         </div>
 
         <div class="bnb">
@@ -240,9 +240,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">靚岩</a></li>
             </ul>
-            <img src="/im13.jpg" alt="靚岩">
+            <img src="./im13.jpg" alt="靚岩">
         </div>
 
         <div class="bnb">
@@ -253,9 +253,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">戀南灣</a></li>
             </ul>
-            <img src="/im14.jpg" alt="戀南灣">
+            <img src="./im14.jpg" alt="戀南灣">
         </div>
 
         <div class="bnb">
@@ -266,9 +266,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">樂雅居</a></li>
             </ul>
-            <img src="/im15.jpg" alt="樂雅居">
+            <img src="./im15.jpg" alt="樂雅居">
         </div>
 
         <div class="bnb">
@@ -279,9 +279,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">南境之美</a></li>
             </ul>
-            <img src="/im16.jpg" alt="南境之美">
+            <img src="./im16.jpg" alt="南境之美">
         </div>
 
         <div class="bnb">
@@ -294,9 +294,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">侑穎</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">去旅行</a></li>
             </ul>
-            <img src="/im17.jpg" alt="去旅行">
+            <img src="./im17.jpg" alt="去旅行">
         </div>
 
         <div class="bnb">
@@ -310,9 +310,9 @@
             </ul>
             <p>網址 :</p>
             <ul>
-                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">施玟彤</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">北歐風情</a></li>
             </ul>
-            <img src="/im18.jpg" alt="北歐風情">
+            <img src="./im18.jpg" alt="北歐風情">
         </div>
     </div>
     <footer>
